=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.14_01-dev

add another dTHR so we build/run with threaded Perl again

USE_APXS fixups:
 
 -use apaci/find_source instead of hard-coding files in apaci/configure
 -re-gen apaci/mod_perl.config before running apache/configure
 -chmod 0644, apaci/mod_perl.config

=item 1.14 - July 18, 1998

PERL_DEBUG=1 w/ USE_APACI=1 will properly link against libperld if exists

remove mod_perl.pm_version file.  move Makefile.PL-time generated code
from mod_perl.pm.PL to mod_perl_hooks.pm.PL, remove mod_perl.pm.PL and
ship with a mod_perl.pm again that is not modified by Makefile.PL so
CPAN.pm can 'install mod_perl' again 

added Apache::Util module (enable with PERL_UTIL_API=1 or EVERYTHING=1)

only break out of the write loop if rwrite() returns -1 and
r->connection->aborted, otherwise continue  

added Apache::URI module (enable with PERL_URI_API=1 or EVERYTHING=1)

register_cleanup to SvREFCNT_dec handler stacks, otherwise we leak
during kill -USR1 when configuration is re-read

TAINT_NOT just after perl_run(), otherwise 'make test' may choke (when
it shouldn't): 
   "Insecure dependency in eval while running with -T switch.
   Callback called exit."
[Salvador Ortiz]

move "rwrite returned -1" message from warn level to debug level

Makefile.PL fix for 'make test' and --enable-shared= modules

applied src/modules/perl/Makefile fixup for ApacheSSL
[Iosif Fettich <ifettich@netsoft.ro>]

experimental optimization for Apache::Constants if XS_IMPORT=1 is
given to Makefile.PL:  
drop heavy Exporter::import/@EXPORT/@EXPORT_OK/%EXPORT_TAGS for
Apache::Constants::import written in C, shaves ~25K from resident
memory

=item 1.13 - July 13, 1998

fix Makefile.PL setting of numeric $User/$Group for 'make test'
[Michael K. Sanders <msanders@confusion.net>]

giving PERL_STASH_POST_DATA=1 to Makefile.PL will save 
read(STDIN, ...)/$r->read data in $r->subprocess_env for logging 
