@@ -8,6 +8,8 @@ Changes - Apache mod_perl change logfile
 
 =item 1.14_01-dev
 
+fixes to support to apache_1.3.0+ssl_1.19 [Salvador Ortiz]
+
 add another dTHR so we build/run with threaded Perl again
 
 USE_APXS fixups:
